# maestro

./: .gitignore  .mcp.json  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_CHECK.md  INTEGRATION_VERIFICATION.txt  LICENSE  README.md  components.json  composer-facelift-mockup.html  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  tailwind.config.ts  test-db.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
.backup-20260205-100806/: Cargo.toml.backend  package.json  tauri.conf.json
.claude/: ast-grep.md  gsd-file-manifest.json  gsd-install-state.json  preflight-ux-preview.html  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.maestro/: agent_models_cache.json  settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  acp-refactor-impl.md  brainstorm-agent-tab.md  brainstorm-tasks-tab.md  config.json  frontend-audit.md  v1.0-MILESTONE-AUDIT.md
bindings/: bindings.ts
docs/: how-to-release.md  ssh-architecture.md  ssh-workflows.md
github-analysis/: auto-claude.md  autocoder.md  automaker.md  crystal.md  opcode.md  vibe-tree.md
maestro-protocol/: Cargo.toml
maestro-server/: Cargo.toml  build.rs  test-harness.py
maestro-server/src/: agent.rs  agent_restart.rs  client.rs  command_ext.rs  detection.rs  dispatch.rs  file_ops.rs  helpers.rs  main.rs  registry.rs  session_handler.rs  sessions.rs  terminal.rs  tests.rs  tool_check.rs  validate_canvas.rs
maestro-server/src/agent/: mod.rs  registry.rs  spawn.rs
maestro-server/src/assets/: registry.json
maestro-server/src/session/: command_loop.rs  connection.rs  handlers.rs  mod.rs  spawn.rs
maestro-server/tests/: integration.rs
playwright-report/: index.html
scripts/: verify-bundle.mjs
sidecar/: package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: canvas-base-skill.md  canvas-catalog.json
src-tauri/bindings/: AppSettings.ts  ConnectionStatus.ts  CreateTaskRequest.ts  EnhancedRecentProject.ts  ErrorEvent.ts  ExecutionLog.ts  ExecutionStatus.ts  MergeOutcome.ts  PoolStatus.ts  Project.ts  ProjectConfig.ts  ProjectConfigRequest.ts  ProjectConfigResponse.ts  ProjectState.ts  ProjectStatus.ts  ReviewComment.ts  ReviewDecision.ts  ReviewFeedback.ts  SshAuthMethod.ts  SshConfig.ts  SshConnection.ts  SyncResult.ts  Task.ts  TaskConfigRequest.ts  TaskSnapshot.ts  TaskStatus.ts  Worktree.ts  WorktreeSnapshot.ts  WorktreeStatus.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_ext.rs  error.rs  lib.rs  main.rs  wsl.rs
src-tauri/src/acp/: attachment_handlers.rs  auth_handlers.rs  canvas.rs  client.rs  connection_server.rs  deploy.rs  discovery_handlers.rs  file_handlers.rs  manager.rs  meta_handlers.rs  mod.rs  prompt_handlers.rs  reader_task.rs  registry.rs  resolve.rs  rpc.rs  session.rs  session_handlers.rs  session_ops.rs  session_types.rs  transport.rs  transport_setup.rs  transport_types.rs
src-tauri/src/connectivity/: docker.rs  docker_handlers.rs  filesystem_handlers.rs  mod.rs  models.rs  sftp_handlers.rs  ssh_handlers.rs  wsl.rs  wsl_handlers.rs
src-tauri/src/connectivity/ssh/: auth.rs  error.rs  heartbeat.rs  history.rs  mod.rs  password_manager.rs  pty.rs  session.rs  sftp.rs  types.rs
src-tauri/src/core/: connection.rs  mod.rs  project_storage.rs  schema.rs  settings.rs
src-tauri/src/db/: connection.rs  execution_logs.rs  mod.rs  project_storage.rs  schema.rs  settings.rs
src-tauri/src/execution/: handlers.rs  mod.rs  models.rs  process.rs  pty_ops.rs  pty_stream.rs  queue.rs  remote.rs  spawn.rs  streaming.rs
src-tauri/src/git/: diff_models.rs  exec.rs  merge.rs  mod.rs  ops.rs  remote.rs  review.rs  review_handlers.rs  review_models.rs  worktree_handlers.rs  worktree_lifecycle.rs  worktree_query.rs  worktree_staging.rs
src-tauri/src/integration/: handlers.rs  image_proxy.rs  integration_models.rs  issue_sync.rs  issue_tracking_handlers.rs  issue_tracking_models.rs  keychain.rs  lookup_handlers.rs  mod.rs  token_manager.rs
src-tauri/src/integration/lookup/: atlassian.rs  forgejo_gitea.rs  github.rs  gitlab.rs  linear.rs  mod.rs
src-tauri/src/integration/providers/: azure_devops.rs  bitbucket.rs  forgejo.rs  gitea.rs  github.rs  gitlab.rs  jira_cloud.rs  linear.rs  mod.rs
src-tauri/src/ipc/: acp_handlers.rs  execution_handlers.rs  filesystem_handlers.rs  handlers.rs  integration_handlers.rs  integration_lookup_handlers.rs  issue_tracking_handlers.rs  issue_tracking_lookup_handlers.rs  mod.rs  project_handlers.rs  provider_lookup_handlers.rs  recent_projects_handlers.rs  review_handlers.rs  settings_handlers.rs  sftp_handlers.rs  ssh_handlers.rs  task_handlers.rs  ticketing_handlers.rs  worktree_handlers.rs  wsl_handlers.rs
src-tauri/src/issue_tracking/: azure_devops.rs  bitbucket.rs  forgejo.rs  gitea.rs  github.rs  gitlab.rs  jira_cloud.rs  keychain.rs  linear.rs  mod.rs  token_manager.rs
src-tauri/src/models/: connection.rs  diff.rs  execution_log.rs  integration.rs  issue_tracking.rs  merge_outcome.rs  mod.rs  project.rs  project_config.rs  project_state.rs  review.rs  settings.rs  sync.rs  task.rs  ticketing.rs  worktree.rs
src-tauri/src/process/: mod.rs  pty.rs  remote.rs  spawner.rs
src-tauri/src/project/: crud.rs  git_ops.rs  handlers.rs  lock.rs  mod.rs  models.rs  prime.rs  session_state.rs  settings.rs
src-tauri/src/settings/: handlers.rs  mod.rs  models.rs
src-tauri/src/ssh/: client.rs  mod.rs  password_manager.rs  session.rs  sftp.rs
src-tauri/src/streaming/: mod.rs  streaming.rs
src-tauri/src/task/: attachments.rs  crud.rs  handlers.rs  instructions.rs  mod.rs  models.rs  ops.rs  relationships.rs
src-tauri/src/ticketing/: azure_devops.rs  forgejo.rs  github.rs  gitlab.rs  jira_cloud.rs  keychain.rs  linear.rs  mod.rs  token_manager.rs
src-tauri/src/websocket/: streaming.rs
(+1712 files in other folders)
