[package]
name = "maestro-server"
version = "0.2.1"
edition = "2021"
description = "Maestro remote headless server — spawns ACP agents on SSH hosts"
license = "Apache-2.0"

[[bin]]
name = "maestro-server"
path = "src/main.rs"

[dependencies]
maestro-protocol = { path = "../maestro-protocol" }
agent-client-protocol = { version = "0.11.1", features = ["unstable"] }
agent-client-protocol-schema = { version = "=0.12.0", features = ["unstable_elicitation"] }
agent-client-protocol-tokio = "0.11.1"
tokio = { version = "1", features = ["rt", "io-util", "io-std", "sync", "macros", "process", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde_json = "1"
futures = "0.3"
ignore = "0.4"
jsonschema = { version = "0.46", default-features = false }
which = "8.0.2"

[build-dependencies]
ureq = { version = "3", features = ["platform-verifier"] }
serde_json = "1"
