[package]
name = "maestro-server"
version = "0.10.0"
edition = "2021"
description = "Maestro remote headless server — spawns ACP agents on SSH hosts"
license = "Apache-2.0"

[features]
unstable_auth_methods = []

[[bin]]
name = "maestro-server"
path = "src/main.rs"

[dependencies]
maestro-protocol = { path = "../maestro-protocol" }
agent-client-protocol = { version = "1.3.0", features = ["unstable_elicitation"] }
agent-client-protocol-schema = { version = "1.4.0", features = ["unstable_auth_methods"] }
tokio = { version = "1", features = [
  "rt",
  "io-util",
  "io-std",
  "sync",
  "macros",
  "process",
  "fs",
  "time",
] }
tokio-util = { version = "0.7", features = ["compat"] }
serde_json = "1"
futures = "0.3"
ignore = "0.4"
jsonschema = { version = "0.48", default-features = false }
which = "8.0.2"

[build-dependencies]
ureq = { version = "3", features = ["platform-verifier"] }
serde_json = "1"
