[package]
name = "maestro"
version = "0.1.0"
description = "Maestro: AI Agent Orchestration for Autonomous Coding"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maestro"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.13", default-features = true, features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
portable-pty = "0.9.0"
ssh2 = "0.9"
keyring = { version = "3.6.3", features = ["windows-native"] }
zeroize = "1.8"
specta = { version = "2.0.0-rc.20", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement", "UI", "Foundation"] }

