[package]
name = "maestro"
version = "0.6.0"
description = "Maestro: AI Agent Orchestration for Autonomous Coding"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maestro"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
octocrab = { version = "0.53", default-features = false, features = [
  "default-client",
  "rustls",
  "jwt-rust-crypto",
] }
graphql_client = { version = "0.16", default-features = false }
jc-adf = "0.2"
htmd = "0.5.4"
aes-gcm = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.13", default-features = true, features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
machine-uid = "0.6"
rand = { version = "0.8", features = ["getrandom"] }
portable-pty = "0.9.0"
russh = { version = "0.61.2", default-features = false, features = ["ring", "rsa", "flate2"] }
russh-sftp = "2.1"
keyring = { version = "3.6.3", features = [
  "windows-native",
  "apple-native",
  "linux-native-sync-persistent",
] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
zeroize = { version = "1.8", features = ["derive"] }
specta = { version = "2.0.0-rc.20", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
urlencoding = "2.1"
which = "8.0.2"
maestro-protocol = { path = "../maestro-protocol" }
fs2 = "0.4"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement", "UI", "Foundation"] }

